fix(person) change border color to #8c8d8f for better contrast

--- a/assets/css/modules/_persons.styl
+++ b/assets/css/modules/_persons.styl
@@ -813,7 +813,7 @@
 
     .fs-person-portrait__portrait {
       background-color: #57585a;
-      border-color: #6c6d6f;
+      border-color: #8c8d8f;
       box-shadow: none;
     }
 
